Added roles and role based endpoints